--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "bower": "^1.3.3",
     "gulp-util": "^3.0.2",
     "shelljs": "^0.3.0"
-  }
+  },
+  "cordovaPlugins": [
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "com.ionic.keyboard"
+  ]
 }
